# cooka_robot

./: .gitignore
cooka_description/: package.xml  setup.cfg  setup.py
cooka_description/config/: controllers.yaml  ros_gz_bridge_gazebo.yaml
cooka_description/cooka_description/: cooka_arm_node.py  cooka_kinematics.py
cooka_description/launch/: display.launch.py  gazebo.launch.py
cooka_description/meshes/: base_link.stl  gripper_bottom_1.stl  gripper_top_1.stl  h_slider_1.stl  scara_link1_1.stl  scara_link2_1.stl  v_slider_1.stl  y_rotation_1.stl  z_rotation_1.stl
cooka_description/urdf/: cooka.gazebo  cooka.ros2control  cooka.xacro  materials.xacro
cooka_door_state_sim/: package.xml  setup.cfg  setup.py
cooka_door_state_sim/config/: modules.yaml
cooka_door_state_sim/cooka_door_state_sim/: door_manager.py  door_pnp_node.py
cooka_door_state_sim/launch/: door_sim.launch.py
cooka_door_state_sim/test/: test_flake8.py  test_pep257.py
cooka_moveit_config/: package.xml  setup.cfg  setup.py
cooka_moveit_config/config/: cooka.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
cooka_moveit_config/launch/: demo.launch.py  moveit_gazebo.launch.py
pnp_operation/: package.xml  setup.cfg  setup.py
pnp_operation/launch/: pnp.launch.py
pnp_operation/meshes/: payload_pan.stl
pnp_operation/pnp_operation/: monitor.py  pnp_node.py  spawn_payload.py
pnp_operation/test/: test_copyright.py  test_flake8.py
